Temporary fix to small layout bug in expenses table

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -116,6 +116,7 @@
 .finances-container .expense {
   color: #dc2626;
   font-weight: 500;
+  width: 6rem;
 }
 
 .finances-container .net-result.positive {
